--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Program
+grpo_lr1e-05/
+sft_lr1e-05_bs2/
+sft_lr1e-05_bs4/
+__pycache__/
+sft_cpu_lr1e-05_bs16/
+sft_cpu_lr1e-05_bs16/
+results.zip
