--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,8 @@ venv.bak/
 
 # mkdocs documentation
 /site
-
+__pycache__/
+*.__pycache__/
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -161,7 +162,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
+.zip
+.idea
 # pytype static type analyzer
 .pytype/
 
