--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
-torch==2.2.0 --index-url https://download.pytorch.org/whl/cu118 
-transformers
-datasets
-trl
+# Core dependencies
+torch>=2.0.0
+transformers>=4.36.0
+datasets>=2.16.0
+trl>=0.7.0
 numpy<2.0
 pandas
 tqdm
 matplotlib
-lm_eval
 seaborn
+
+# Evaluation
+lm_eval>=0.4.0
+
+# Utilities
 hf_transfer
 langdetect
 immutabledict
+safetensors
+
+# Optional: HumanEval (code generation benchmark)
+# Uncomment if you want to run HumanEval:
+# human-eval
+
+# Optional: Additional benchmarks
+# These are handled gracefully if not available
