--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
-torch==2.2.0 --index-url https://download.pytorch.org/whl/cu118 
+--index-url https://download.pytorch.org/whl/cu118
+torch==2.2.0
 transformers
 datasets
 trl
