--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
 # Core dependencies
-# PyTorch packages from PyTorch index (CUDA 12.8)
-torch==2.7.0+cu128
---extra-index-url https://download.pytorch.org/whl/cu128
-torchvision
-torchaudio
 transformers>=4.36.0
 datasets>=2.16.0
-trl>=0.7.0
+trl==0.22.1
 numpy<2.0
 pandas
 tqdm
@@ -21,7 +16,3 @@ hf_transfer
 langdetect
 immutabledict
 safetensors
-
-# Optional: HumanEval (code generation benchmark)
-# Uncomment if you want to run HumanEval:
-# human-eval
